list of categories api and admin api
